log
In file included from kernel/trap.c:8:
kernel/defs.h:127:17: error: conflicting types for 'memcmp'; have 'int(const void *, const void *, uint)' {aka 'int(const void *, const void *, unsigned int)'}
  127 | int             memcmp(const void*, const void*, uint);
      |                 ^~~~~~
In file included from kernel/trap.c:7:
/usr/local/riscv64-unknown-elf/include/string.h:30:10: note: previous declaration of 'memcmp' with type 'int(const void *, const void *, size_t)' {aka 'int(const void *, const void *, long unsigned int)'}
   30 | int      memcmp (const void *, const void *, size_t);
      |          ^~~~~~
In file included from kernel/trap.c:8:
kernel/defs.h:128:17: error: conflicting types for 'memmove'; have 'void *(void *, const void *, uint)' {aka 'void *(void *, const void *, unsigned int)'}
  128 | void*           memmove(void*, const void*, uint);
      |                 ^~~~~~~
In file included from kernel/trap.c:7:
/usr/local/riscv64-unknown-elf/include/string.h:32:10: note: previous declaration of 'memmove' with type 'void *(void *, const void *, size_t)' {aka 'void *(void *, const void *, long unsigned int)'}
   32 | void *   memmove (void *, const void *, size_t);
      |          ^~~~~~~
In file included from kernel/trap.c:8:
kernel/defs.h:129:17: error: conflicting types for 'memset'; have 'void *(void *, int,  uint)' {aka 'void *(void *, int,  unsigned int)'}
  129 | void*           memset(void*, int, uint);
      |                 ^~~~~~
In file included from kernel/trap.c:7:
/usr/local/riscv64-unknown-elf/include/string.h:33:10: note: previous declaration of 'memset' with type 'void *(void *, int,  size_t)' {aka 'void *(void *, int,  long unsigned int)'}
   33 | void *   memset (void *, int, size_t);
      |          ^~~~~~
In file included from kernel/trap.c:8:
kernel/defs.h:131:17: error: conflicting types for 'strlen'; have 'int(const char *)'
  131 | int             strlen(const char*);
      |                 ^~~~~~
In file included from kernel/trap.c:7:
/usr/local/riscv64-unknown-elf/include/string.h:41:10: note: previous declaration of 'strlen' with type 'size_t(const char *)' {aka 'long unsigned int(const char *)'}
   41 | size_t   strlen (const char *);
      |          ^~~~~~
In file included from kernel/trap.c:8:
kernel/defs.h:132:17: error: conflicting types for 'strncmp'; have 'int(const char *, const char *, uint)' {aka 'int(const char *, const char *, unsigned int)'}
  132 | int             strncmp(const char*, const char*, uint);
      |                 ^~~~~~~
In file included from kernel/trap.c:7:
/usr/local/riscv64-unknown-elf/include/string.h:43:10: note: previous declaration of 'strncmp' with type 'int(const char *, const char *, size_t)' {aka 'int(const char *, const char *, long unsigned int)'}
   43 | int      strncmp (const char *, const char *, size_t);
      |          ^~~~~~~
In file included from kernel/trap.c:8:
kernel/defs.h:133:17: error: conflicting types for 'strncpy'; have 'char *(char *, const char *, int)'
  133 | char*           strncpy(char*, const char*, int);
      |                 ^~~~~~~
In file included from kernel/trap.c:7:
/usr/local/riscv64-unknown-elf/include/string.h:44:10: note: previous declaration of 'strncpy' with type 'char *(char * restrict,  const char * restrict,  size_t)' {aka 'char *(char * restrict,  const char * restrict,  long unsigned int)'}
   44 | char    *strncpy (char *__restrict, const char *__restrict, size_t);
      |          ^~~~~~~
make: *** [<builtin>: kernel/trap.o] Error 1
